force-app/main/default/objects/Form_LCF_Outcome_1__c/Form_LCF_Outcome_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund - Full Application - Outcome - 1.0</description>
    <label>Form LCF Outcome 1.0</label>
    <nameField>
        <displayFormat>OUT-{00000}</displayFormat>
        <label>Outcome ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form LCF Outcome 1.0</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>