force-app/main/default/objects/Form_LCF_Outcome_1__c/fields/ou_full_application__c.field-meta.xml
<CustomField>
    <fullName>ou_full_application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OU - Full Application 1.0</label>
    <referenceTo>Form_LCF_Full_App_1__c</referenceTo>
    <relationshipLabel>Form LCF Outcome 1.0</relationshipLabel>
    <relationshipName>ou_full_application</relationshipName>
    <type>Lookup</type>
</CustomField>