force-app/main/default/objects/Form_LCF_Outcome_1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>application__c</columns>
    <columns>ou_full_application__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>